[gd_scene load_steps=17 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Assests/Models/BasicVehicle_v01.glb" type="PackedScene" id=2]
[ext_resource path="res://PauseMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Position.gd" type="Script" id=5]
[ext_resource path="res://Assests/Fonts/OpenSans/OpenSans-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://UI_Crash.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.25098, 1, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.203922, 0.203922, 0.227451, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.952941, 0.615686, 0.180392, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.203922, 0.203922, 0.227451, 1 )

[sub_resource type="DynamicFont" id=6]
size = 100
outline_size = 2
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]
size = 48
font_data = ExtResource( 6 )

[sub_resource type="CapsuleShape" id=8]
radius = 1.5
height = 3.06948

[sub_resource type="DynamicFont" id=9]
size = 48
font_data = ExtResource( 6 )

[sub_resource type="CanvasItemMaterial" id=10]
render_priority = 1

[node name="Player" type="KinematicBody"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
collision_mask = 7
script = ExtResource( 1 )

[node name="Vehicle" parent="." instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 1.6, 0 )

[node name="RotationHelper" type="Spatial" parent="Vehicle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -1.77636e-15 )

[node name="Camera" type="Camera" parent="Vehicle/RotationHelper"]
transform = Transform( 0.25, 0, 0, 0, 0.22632, 0.106204, 0, -0.106204, 0.22632, 0, 3.37605, 3.79201 )
cull_mask = 1048573
fov = 100.0
far = 10000.0

[node name="Checkpoint" type="Label" parent="Vehicle/RotationHelper/Camera"]
margin_left = 16.0
margin_top = 16.0
margin_right = 179.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 1 )
text = "Lap: 0
Checkpoint: 0"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed" type="Label" parent="Vehicle/RotationHelper/Camera"]
margin_left = 24.0
margin_top = 520.0
margin_right = 187.0
margin_bottom = 554.0
custom_fonts/font = SubResource( 1 )
text = "Speed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Boost" type="Label" parent="Vehicle/RotationHelper/Camera"]
margin_left = 24.0
margin_top = 546.0
margin_right = 187.0
margin_bottom = 580.0
custom_fonts/font = SubResource( 1 )
text = "Boost"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MiniMap" type="TextureRect" parent="Vehicle/RotationHelper/Camera"]
margin_left = 744.0
margin_top = 24.0
margin_right = 1000.0
margin_bottom = 280.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedBar" type="ProgressBar" parent="Vehicle/RotationHelper/Camera"]
margin_left = 104.0
margin_top = 528.0
margin_right = 344.0
margin_bottom = 550.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoostBar" type="ProgressBar" parent="Vehicle/RotationHelper/Camera"]
margin_left = 104.0
margin_top = 552.0
margin_right = 280.0
margin_bottom = 574.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
step = 0.0
value = 50.25
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crash" type="Label" parent="Vehicle/RotationHelper/Camera"]
visible = false
modulate = Color( 1, 1, 0.34902, 1 )
margin_top = 256.0
margin_right = 1024.0
margin_bottom = 600.0
custom_fonts/font = SubResource( 6 )
text = "! ! CRASH ! !"
align = 1
valign = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartTimer" type="Label" parent="Vehicle/RotationHelper/Camera"]
visible = false
margin_left = 384.0
margin_top = 64.0
margin_right = 576.0
margin_bottom = 136.0
custom_fonts/font = SubResource( 7 )
text = "00:00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BodyCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.36696, -0.313739 )
shape = SubResource( 8 )

[node name="GroundDetect" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.864745, -1.81113 )
enabled = true
cast_to = Vector3( 0, -3.5, 0 )
collision_mask = 2
collide_with_areas = true

[node name="GroundDetect2" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.864745, 1.22089 )
enabled = true
cast_to = Vector3( 0, -3.5, 0 )
collision_mask = 2
collide_with_areas = true

[node name="ControlTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
one_shot = true

[node name="NameLocation" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.5, 0 )

[node name="DisplayName" type="Label" parent="NameLocation"]
margin_bottom = 67.0
custom_fonts/font = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameCast" type="RayCast" parent="NameLocation"]
enabled = true
cast_to = Vector3( 0, 0, 0 )
collision_mask = 2
collide_with_areas = true

[node name="Pause" parent="." instance=ExtResource( 4 )]
visible = false
material = SubResource( 10 )
[connection signal="timeout" from="ControlTimer" to="." method="_respawn"]
